<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/veryEasyBtn"
                style="@style/CategoryBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_green_dark"
                android:text="@string/very_easy" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/veryEasyRView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone" />

            <Button
                android:id="@+id/easyBtn"
                style="@style/CategoryBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_blue_dark"
                android:text="@string/easy" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/easyRView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone" />

            <Button
                android:id="@+id/mediumBtn"
                style="@style/CategoryBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_orange_light"
                android:text="@string/medium" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/mediumRView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone" />

            <Button
                android:id="@+id/hardBtn"
                style="@style/CategoryBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_orange_dark"
                android:text="@string/hard" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/hardRView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone" />

            <Button
                android:id="@+id/veryHardBtn"
                style="@style/CategoryBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_red_dark"
                android:text="@string/very_hard" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/veryHardRView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone" />

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@android:drawable/ic_input_add"
            android:tint="@android:color/white"
            android:backgroundTint="@android:color/black" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>